3era noche de codeo

--- a/src/app/components/certificates/certificates.component.html
+++ b/src/app/components/certificates/certificates.component.html
@@ -1,1 +1,13 @@
-<p>CERTIFICATES</p>
+<div class="mat-typography">
+    <table>
+        <tr>
+            <th class="icono">
+                <img src="assets/img/certificate.png" width="60" class="icon-workexp">
+            </th>
+            <th>
+                <h2 class="title-workexp ">CERTIFICATES</h2>
+            </th>
+        </tr>
+    </table>
+</div>
+<br>
