--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -17,6 +17,7 @@
     .texto-titulo {
         font-size: 4rem;
         width: fit-content;
+        font-family: serif;
     }
     
     .contenedor-bg-padre {
