--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,1 +1,174 @@
-<p>SKILLS</p>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="icon-skill">
+                <img src="assets/img/skill.png" class="icon-skill">
+            </th>
+            <th class="th-skill">
+                <h2 class="title-skills">SKILLS</h2>
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-h-skills">
+    <h3 class="h-comp-skills">Computer Skills</h3>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Java</h5>
+            </th>
+            <th>
+                <img src={{skillLevelHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Angular</h5>
+            </th>
+            <th>
+                <img src={{skillLevelHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Spring 5</h5>
+            </th>
+            <th>
+                <img src={{skillLevelHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">HTML</h5>
+            </th>
+            <th>
+                <img src={{skillLevelMedium}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">CSS</h5>
+            </th>
+            <th>
+                <img src={{skillLevelMedium}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">C</h5>
+            </th>
+            <th>
+                <img src={{skillLevelVeryHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-skill">
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">MySQL</h5>
+            </th>
+            <th>
+                <img src={{skillLevelMedium}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div class="div-h-skills">
+    <h3 class="h-comp-skills">Interpersonal Skills</h3>
+</div>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Ability to Work under Pressure</h5>
+            </th>
+            <th>
+                <img src={{skillLevelHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Analytical Skills</h5>
+            </th>
+            <th>
+                <img src={{skillLevelVeryHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Detail-Oriented</h5>
+            </th>
+            <th>
+                <img src={{skillLevelVeryHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Good Team Player</h5>
+            </th>
+            <th>
+                <img src={{skillLevelVeryHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Multitasking</h5>
+            </th>
+            <th>
+                <img src={{skillLevelHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
+<div>
+    <table>
+        <tr class="tr-skill">
+            <th class="th-skill">
+                <h5 class="skill">Problem-solving</h5>
+            </th>
+            <th>
+                <img src={{skillLevelHigh}} class="bar">
+            </th>
+        </tr>
+    </table>
+</div>
