--- a/src/app/components/certificates/certificates.component.html
+++ b/src/app/components/certificates/certificates.component.html
@@ -1,13 +1,34 @@
-<div class="mat-typography">
-    <table>
-        <tr>
-            <th class="icono">
-                <img src="assets/img/certificate.png" width="60" class="icon-workexp">
-            </th>
-            <th>
-                <h2 class="title-workexp ">CERTIFICATES</h2>
-            </th>
-        </tr>
-    </table>
+<div class="cert-div-container">
+    <div>
+        <table>
+            <tr>
+                <th class="th-icono-cert">
+                    <img src="assets/img/certificate.png">
+                </th>
+                <th>
+                    <h2 class="title-cert">CERTIFICATES</h2>
+                </th>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td class="titulo-style">{{certis.certi1.titulo}}</td>
+                <td class="cert-periodo">{{certis.certi1.periodo}}</td>
+            </tr>
+            <tr class="institucion-style">{{certis.certi1.institucion}}, {{certis.certi1.ciudadInstitucion}}, {{certis.certi1.paisInstitucion}}</tr>
+            <tr class="tecno-style">{{certis.certi1.tecnos.tecno1}}</tr>
+        </table>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td class="titulo-style">{{certis.certi2.titulo}}</td>
+                <td class="cert-periodo">{{certis.certi2.periodo}}</td>
+            </tr>
+            <tr class="institucion-style">{{certis.certi2.institucion}}, {{certis.certi2.ciudadInstitucion}}, {{certis.certi2.paisEmpresa}}</tr>
+            <tr class="tecno-style">{{certis.certi2.tecnos.tecno1}}</tr>
+        </table>
+    </div>
 </div>
-<br>
