--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,83 +1,83 @@
-<div>
-    <table>
-        <tr>
-            <th class="th-icono-work">
-                <img src="assets/img/work.png">
-            </th>
-            <th>
-                <h2 class="title-workexp">WORK EXPERIENCE</h2>
-            </th>
-        </tr>
-    </table>
+<div class="ubicacion-exp">
+    <div class="exp-div-container">
+        <div>
+            <table>
+                <tr>
+                    <th class="th-icono-work">
+                        <img src="assets/img/work.png">
+                    </th>
+                    <th>
+                        <h2 class="title-workexp">WORK EXPERIENCE</h2>
+                    </th>
+                </tr>
+            </table>
+        </div>
+
+        <div>
+            <table>
+                <tr>
+                    <td class="cargo-style">{{jobs.job1.cargo}}</td>
+                    <td class="job-periodo">{{jobs.job1.periodo}}</td>
+                </tr>
+                <tr class="empresa">{{jobs.job1.empresa}}, {{jobs.job1.ciudadEmpresa}}, {{jobs.job1.paisEmpresa}}</tr>
+                <tr>
+                    <ul class="ul-exp">
+                        <li class="li-exp">{{jobs.job1.tareas.tarea1}}</li>
+                        <li class="li-exp">{{jobs.job1.tareas.tarea2}}</li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+
+        <div>
+            <table>
+                <tr>
+                    <td class="cargo-style">{{jobs.job2.cargo}}</td>
+                    <td class="job-periodo">{{jobs.job2.periodo}}</td>
+                </tr>
+                <tr class="empresa">{{jobs.job2.empresa}}, {{jobs.job2.ciudadEmpresa}}, {{jobs.job1.paisEmpresa}}</tr>
+                <tr>
+                    <ul class="ul-exp">
+                        <li class="li-exp">{{jobs.job2.tareas.tarea1}}</li>
+                        <li class="li-exp">{{jobs.job2.tareas.tarea2}}</li>
+                        <li class="li-exp">{{jobs.job2.tareas.tarea3}}</li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+
+        <div>
+            <table>
+                <tr>
+                    <td class="cargo-style">{{jobs.job3.cargo}}</td>
+                    <td class="job-periodo">{{jobs.job3.periodo}}</td>
+                </tr>
+                <tr class="empresa">{{jobs.job3.empresa}}, {{jobs.job3.ciudadEmpresa}}, {{jobs.job3.paisEmpresa}}</tr>
+                <tr>
+                    <ul class="ul-exp">
+                        <li class="li-exp">{{jobs.job3.tareas.tarea1}}</li>
+                        <li class="li-exp">{{jobs.job3.tareas.tarea2}}</li>
+                        <li class="li-exp">{{jobs.job3.tareas.tarea3}}</li>
+                        <li class="li-exp">{{jobs.job3.tareas.tarea4}}</li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+
+        <div>
+            <table>
+                <tr>
+                    <td class="cargo-style">{{jobs.job4.cargo}}</td>
+                    <td class="job-periodo">{{jobs.job4.periodo}}</td>
+                </tr>
+                <tr class="empresa">{{jobs.job4.empresa}}, {{jobs.job4.ciudadEmpresa}}, {{jobs.job4.paisEmpresa}}</tr>
+                <tr>
+                    <ul class="ul-exp">
+                        <li class="li-exp">{{jobs.job4.tareas.tarea1}}</li>
+                        <li class="li-exp">{{jobs.job4.tareas.tarea2}}</li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
-
-<br>
-
-<div>
-    <table>
-        <tr>
-            <td class="cargo-style">{{jobs.job1.cargo}}</td>
-            <td class="job-periodo">{{jobs.job1.periodo}}</td>
-        </tr>
-        <tr class="empresa">{{jobs.job1.empresa}}, {{jobs.job1.ciudadEmpresa}}, {{jobs.job1.paisEmpresa}}</tr>
-        <tr>
-            <ul class="ul-exp">
-                <li class="li-exp">{{jobs.job1.tareas.tarea1}}</li>
-                <li class="li-exp">{{jobs.job1.tareas.tarea2}}</li>
-            </ul>
-        </tr>
-    </table>
-</div>
-
-<div>
-    <table>
-        <tr>
-            <td class="cargo-style">{{jobs.job2.cargo}}</td>
-            <td class="job-periodo">{{jobs.job2.periodo}}</td>
-        </tr>
-        <tr class="empresa">{{jobs.job2.empresa}}, {{jobs.job2.ciudadEmpresa}}, {{jobs.job1.paisEmpresa}}</tr>
-        <tr>
-            <ul class="ul-exp">
-                <li class="li-exp">{{jobs.job2.tareas.tarea1}}</li>
-                <li class="li-exp">{{jobs.job2.tareas.tarea2}}</li>
-                <li class="li-exp">{{jobs.job2.tareas.tarea3}}</li>
-            </ul>
-        </tr>
-    </table>
-</div>
-
-<div>
-    <table>
-        <tr>
-            <td class="cargo-style">{{jobs.job3.cargo}}</td>
-            <td class="job-periodo">{{jobs.job3.periodo}}</td>
-        </tr>
-        <tr class="empresa">{{jobs.job3.empresa}}, {{jobs.job3.ciudadEmpresa}}, {{jobs.job3.paisEmpresa}}</tr>
-        <tr>
-            <ul class="ul-exp">
-                <li class="li-exp">{{jobs.job3.tareas.tarea1}}</li>
-                <li class="li-exp">{{jobs.job3.tareas.tarea2}}</li>
-                <li class="li-exp">{{jobs.job3.tareas.tarea3}}</li>
-                <li class="li-exp">{{jobs.job3.tareas.tarea4}}</li>
-            </ul>
-        </tr>
-    </table>
-</div>
-
-<div>
-    <table>
-        <tr>
-            <td class="cargo-style">{{jobs.job4.cargo}}</td>
-            <td class="job-periodo">{{jobs.job4.periodo}}</td>
-        </tr>
-        <tr class="empresa">{{jobs.job4.empresa}}, {{jobs.job4.ciudadEmpresa}}, {{jobs.job4.paisEmpresa}}</tr>
-        <tr>
-            <ul class="ul-exp">
-                <li class="li-exp">{{jobs.job4.tareas.tarea1}}</li>
-                <li class="li-exp">{{jobs.job4.tareas.tarea2}}</li>
-            </ul>
-        </tr>
-    </table>
-</div>
-
-<li class="li-exp" nk href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap" rel="stylesheet">
