--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -8,7 +8,7 @@
     
     .background-titulo {
         width: fit-content;
-        border-radius: 5px;
+        border-radius: 1px;
         /* height: 150px; */
         /* padding-top: 15px;
     padding-bottom: 15px; */
@@ -18,6 +18,8 @@
         font-size: 4rem;
         width: fit-content;
         font-family: serif;
+        padding-left: 30px;
+        padding-right: 30px;
     }
     
     .contenedor-bg-padre {
